--- a/src/styles/other/mixins.scss
+++ b/src/styles/other/mixins.scss
@@ -19,7 +19,14 @@
 }
 /*5 - width, 6 - height*/
 $colors: (
-	link: #006199
+	orange: #f89b24,
+	button: #d72367,
+	blue: #5cb5e5,
+	pink: #e20055,
+	yellow: #fede00,
+	text: #171717,
+	grayText: #474747,
+
 	// header: #333333,
 	// text: #333333,
 	// desc: #737373,
